welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Int(1)
 required: String
    if (estSurBiscuit()){ vuBiscuit = vuBiscuit + 1}
                                                  ^