welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit = false
  for (i <- 1 to 6){ 
    if (estSurBiscuit()){ vuBiscuit = vuBiscuit + 1}
    avance()
  }
  for (i<- 1 to 6){recule()}
  return vuBiscuit
}